output/ingress-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"ledger-api","namespace":"payments"},"spec":{"ingressClassName":"nginx","rules":[{"host":"ledger.local","http":{"paths":[{"backend":{"service":{"name":"ledger-api","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-07-29T07:18:25Z"
  generation: 1
  name: ledger-api
  namespace: payments
  resourceVersion: "9527"
  uid: e37755c2-f776-483d-88ce-8e7102feed11
spec:
  ingressClassName: nginx
  rules:
  - host: ledger.local
    http:
      paths:
      - backend:
          service:
            name: ledger-api
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
