output/networkpolicy-final.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"ledger-api-network-policy","namespace":"payments"},"spec":{"egress":[{}],"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"ingress-nginx"}}}],"ports":[{"port":8080,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"ledger-api"}},"policyTypes":["Ingress","Egress"]}}
    creationTimestamp: "2026-07-29T09:35:43Z"
    generation: 1
    name: ledger-api-network-policy
    namespace: payments
    resourceVersion: "9385"
    uid: 047c4910-e0ca-479b-978a-55e76b65725d
  spec:
    egress:
    - {}
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
      ports:
      - port: 8080
        protocol: TCP
    podSelector:
      matchLabels:
        app: ledger-api
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: ""
