output/service-final.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"ledger-api","namespace":"payments"},"spec":{"ports":[{"port":8080,"protocol":"TCP","targetPort":8080}],"selector":{"app":"ledger-api"},"type":"ClusterIP"}}
  creationTimestamp: "2026-07-29T07:17:21Z"
  name: ledger-api
  namespace: payments
  resourceVersion: "1437"
  uid: 3d635b02-294c-4969-93fe-40d100bf784e
spec:
  clusterIP: 10.103.117.211
  clusterIPs:
  - 10.103.117.211
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ledger-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
